# workshop_from_jupyter_to_deploy

./: .env.dev  README.md  main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
