[tool.poetry]
name = "workshop2"
version = "0.1.0"
description = "struct a Data Analytics project from Jupyter to Deployment"
authors = ["PedroPauloMR <pedrop.ribeiro@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
